<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="text">时间改变着一切，一切改变着我们。原先看不惯的，如今习惯了；曾经很想要的，现在不需要了；开始很执着的，后来很洒脱了。失去产生了痛苦，也铸就了坚强；经历付出了代价，也锤炼了成长。没流泪，不代表没眼泪；无所谓，不代表无所累。当你知道什么是欲哭无泪，欲诉无语，欲笑无声的时候，你成熟了。累了没人疼，你要学会休息；哭了没人哄，你要知道自立；痛了没人懂，你要扛起压力抱怨的话不要说。有些委屈，是说不出来的。即使有人问，也不知从何说起；就算有人疼，也代替不了自己。嘴里有话却说不出，沉默代表了一切；心中有疼却表不明，泪水倾诉着所有。一些经历，只有自己感受；一些心情，只有自己懂得。说不出的委屈，才最委屈；心里的疼痛，才最疼痛！总是为别人着想，却要独自去疗伤；一直在嘴上逞强，心却没那么坚强。
</string>
    <string name="myText">
        hTextView TextView Test!!
    </string>
<string name="createEventTable">
    CREATE TABLE IF NOT EXISTS `event_db` (
    `id` INTEGER NOT NULL PRIMARY KEY autoincrement,
    `name` TEXT NOT NULL,
    `create_time` TEXT NOT NULL,
    `update_time` TEXT DEFAULT NULL ,
    `read_time` TEXT DEFAULT NULL,
    `description` TEXT DEFAULT NULL,
    `event_level` INTEGER  NULL,
    `read_times` INTEGER  NULL,
    `description_path` TEXT NULL
    );
</string>
    <string-array name="insert">
        <item>INSERT INTO `event_db` VALUES (\'1\', \'test\', \'2019-01-04 11:52:59\', \'2019-01-04 11:52:59\',
            \'2019-01-04 11:52:59\', \'desciption\', \'0000000004\', \'00000000001\',null);</item>
        <item>INSERT INTO `event_db` VALUES (\'2\', \'lgy\', \'2019-01-03 15:11:31\', \'2019-01-03 15:11:31\', null, \'new
            Event2\', \'0000000001\', null,null);</item>
        <item>INSERT INTO `event_db` VALUES (\'3\', \'lgy\', \'2019-01-03 15:11:31\', \'2019-01-03 15:11:31\', null, \'new
            Event2\', \'0000000001\', null,null);</item>
        <item>INSERT INTO `event_db` VALUES (\'5\', \'lgy2\', \'2019-01-04 14:24:49\', \'2019-01-04 14:24:49\', \'2019-01-04 14:24:49\', \'new Event2\', \'0000000004\', null,null);
        </item>
        <item>INSERT INTO `event_db` VALUES (\'6\', \'lgy\', \'2019-01-04 11:07:38\', \'2019-01-04 11:07:38\', null, \'new
            Event2\', \'0000000002\', null,null);</item>
        <item>INSERT INTO `event_db` VALUES (\'7\', \'lgy\', \'2019-01-04 11:25:29\', \'2019-01-04 11:25:29\', null, \'new
            Event2\', \'0000000002\', null,null);</item>

    </string-array>
    <string name="transaction">BEGIN TRANSACTION;
        CREATE TEMPORARY TABLE t1_backup1(id,name,create_time,update_time,read_time,description,event_level,read_times,description_path);
        INSERT INTO t1_backup1 SELECT * FROM event_db;
        DROP TABLE event_db;
        CREATE TABLE IF NOT EXISTS `event_db` (
        `id` INTEGER NOT NULL PRIMARY KEY autoincrement,
        `name` TEXT NOT NULL,
        `create_time` TEXT NOT NULL,
        `update_time` TEXT DEFAULT NULL ,
        `read_time` TEXT DEFAULT NULL,
        `description` TEXT DEFAULT NULL,
        `event_level` INTEGER  NOT NULL default 0,
        `read_times` INTEGER  NULL,
        `description_path` TEXT NULL
        );
        INSERT INTO event_db SELECT * FROM t1_backup1;
        DROP TABLE t1_backup1;
        COMMIT;
    </string>
    <string name="insertIn">
        INSERT INTO `event_db` VALUES (\'1\', \'test\', \'2019–01-04 11:52:59\', \'2019-01-04 11:52:59', '2019-01-04
        11:52:59', 'desciption', '0000000004', '00000000001',null);
    </string>
    <string name="add_event_name">名字</string>
    <string name="add_event_description">内容</string>
    <string name="add_event_finish">添加</string>
    <string name="add_event_cancel">取消</string>
    <string name="add_event_upload_img">上传图片</string>
    <string name="add_event_upload_video">上传视频</string>
    <string name="add_event_import">导入文本</string>
    <string name="img_path">图片路径</string>
    <string name="video_path">视频路径</string>
</resources>
