<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:text="@string/add_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="66dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="84dp"
            android:id="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="66dp"/>
    <TextView
            android:text="@string/add_event_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="152dp"
            android:layout_alignStart="@+id/textView"
            android:id="@+id/textView2"
            android:layout_alignLeft="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/add_event_name"
            android:ems="10"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="22dp"
            android:layout_alignBottom="@+id/textView"
            android:id="@+id/add_event_name_edit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="22dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/add_event_description"
            android:maxLength="100"
            android:ems="10"
            android:layout_alignStart="@+id/add_event_name_edit"
            android:id="@+id/add_event_description_edit"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/add_event_name_edit"/>
    <TextView
            android:text="@string/add_event_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="168dp"
            android:id="@+id/add_cancel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="58dp"
            android:layout_marginLeft="58dp"
            android:layout_alignParentLeft="true"/>
    <TextView
            android:text="@string/add_event_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="59dp"
            android:layout_alignBottom="@+id/add_cancel"
            android:id="@+id/add_finish"
            android:layout_alignParentRight="true"
            android:layout_marginRight="59dp"/>
    <TextView
            android:text="@string/add_event_upload_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="206dp"
            android:layout_alignStart="@+id/textView"
            android:id="@+id/add_upload_img"
            android:layout_alignLeft="@+id/textView"/>
    <TextView
            android:text="@string/add_event_upload_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="234dp"
            android:layout_alignStart="@+id/textView"
            android:id="@+id/add_upload_video"
            android:layout_alignLeft="@+id/textView"/>
    <TextView
            android:text="@string/img_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignTop="@+id/add_upload_img"
            android:layout_alignStart="@+id/add_event_name_edit" android:id="@+id/img_path"
            android:layout_alignLeft="@+id/add_event_name_edit"/>
    <TextView
            android:text="@string/video_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignTop="@+id/add_upload_video"
            android:layout_alignStart="@+id/add_event_name_edit" android:id="@+id/video_path"
            android:layout_alignLeft="@+id/add_event_name_edit"/>

</RelativeLayout>